Wed Apr  6 12:58:38 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * performance-tests/Sequence_Latency/Sequence_Operations_Time/README.txt:
        * performance-tests/Sequence_Latency/Sequence_Operations_Time/Sequence_Ops_Time.mpc:
        * performance-tests/Sequence_Latency/Sequence_Operations_Time/sequence.idl:
        * performance-tests/Sequence_Latency/Sequence_Operations_Time/test.cpp:

          A new test designed to highlight the amount of time spent by
          dynamically growing sequences of varying element complexity.
        
Tue Apr  5 13:00:41 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/Notify_Service/Notify_Service.cpp:

          Scoreboard fix.

Tue Apr  5 08:11:57 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
        * TAO_IDL/be_include/be_global.h:
          Don't use NONE as enum value, this is a macro on VxWorks

Fri Apr  1 15:10:04 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/Naming_Service/Naming_Service.h:
        * orbsvcs/Naming_Service/Naming_Service.cpp:

          Added support for multi-thread operation. In environments where
          100s of clients are resolving references, the single-threaded
          naming service becomes a real performance bottleneck. This patch
          adds a -n <numthreads> command line option. Threading is
          achieved by using an ACE_Task to call ORB::run() on multiple
          threads. Default is single threaded behavior.

        * orbsvcs/Notify_Service/Notify_Service.cpp:

          Added a try/catch to the naming service resolving function. It
          is possible that and execption is thrown while trying to
          connect, and that was causing the service to crash abrupty
          messing up some administrative scripts. Now an error is logged
          and shutdown happens gracefully.
